# sandlock

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: sandlock.py
crates/sandlock-cli/: Cargo.toml
crates/sandlock-cli/src/: learn.rs  main.rs  network_registry.rs
crates/sandlock-cli/tests/: cli_test.rs  profile_integration.rs
crates/sandlock-core/: Cargo.toml  build.rs
crates/sandlock-core/examples/: openat_audit.rs
crates/sandlock-core/src/: arch.rs  ca_inject.rs  checkpoint.rs  context.rs  control.rs  credential.rs  dry_run.rs  error.rs  fork.rs  freeze.rs  http.rs  http_acl.rs  image.rs  landlock.rs  lib.rs  network.rs  pipeline.rs  policy.rs  policy_fn.rs  port_remap.rs  process.rs  procfs.rs  profile.rs  protection.rs  random.rs  resolved.rs  resource.rs  result.rs  sandbox.rs  sandbox_freeze.rs  seccomp_plan.rs  sibling_freeze.rs  time.rs  transaction.rs  vdso.rs
crates/sandlock-core/src/checkpoint/: capture.rs  image.rs  inject.rs  mod.rs  pager.rs  regs.rs  restore-stub.c  restore_blob.rs  resume.rs
crates/sandlock-core/src/chroot/: dispatch.rs  mod.rs  resolve.rs
crates/sandlock-core/src/context/: tests.rs
crates/sandlock-core/src/cow/: branchfs.rs  dispatch.rs  mod.rs  overlayfs.rs  seccomp.rs
crates/sandlock-core/src/netlink/: handlers.rs  mod.rs  proto.rs  proxy.rs  state.rs  synth.rs
crates/sandlock-core/src/network/: connect.rs  materialize.rs  mod.rs  rules.rs  send.rs  send_engine.rs  unix.rs  verdict.rs
crates/sandlock-core/src/sandbox/: builder.rs  tests.rs
crates/sandlock-core/src/seccomp/: bpf.rs  ctx.rs  dispatch.rs  mod.rs  notif.rs  state.rs  syscall.rs  syscall_names.rs
crates/sandlock-core/src/sys/: fs.rs  mod.rs  structs.rs  syscall.rs
crates/sandlock-core/src/transparent_proxy/: ca.rs  mod.rs  service.rs  tls.rs  upstream.rs
crates/sandlock-core/tests/: integration.rs  sandbox_validate.rs
crates/sandlock-core/tests/integration/: test_checkpoint.rs  test_chroot.rs  test_control.rs  test_cow.rs  test_determinism.rs  test_dry_run.rs  test_exec_fd.rs  test_extra_handlers.rs  test_fork.rs  test_handlers.rs  test_http_acl.rs  test_http_inject_ca.rs  test_landlock.rs  test_netlink_virt.rs  test_network.rs  test_pipeline.rs  test_pipeline_txn.rs  test_policy.rs  test_policy_fn.rs  test_popen.rs  test_port_remap.rs  test_privileged.rs  test_procfs.rs  test_protection.rs  test_resource.rs  test_restore.rs  test_restore_stub.rs  test_sandbox.rs  test_seccomp_enforce.rs  test_transaction.rs  test_user_mapping.rs
crates/sandlock-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/sandlock-ffi/include/: sandlock.h
crates/sandlock-ffi/src/: handler.rs  lib.rs  notif_repr.rs  runtime.rs
crates/sandlock-ffi/src/handler/: abi.rs  adapter.rs  mod.rs  run.rs
crates/sandlock-ffi/tests/: c_smoke.rs  handler_smoke.rs  policy_fn.rs  popen.rs  protection.rs  restore.rs
crates/sandlock-ffi/tests/c/: handler_smoke.c
crates/sandlock-init/: Cargo.toml
crates/sandlock-init/src/: fdrecv.rs  main.rs  proto.rs
crates/sandlock-oci/: Cargo.toml  README.md  build.rs
crates/sandlock-oci/src/: fdpass.rs  lib.rs  main.rs  policy.rs  spec.rs  state.rs  supervisor.rs
crates/sandlock-oci/src/init/: mod.rs
crates/sandlock-oci/tests/: integration.rs
docs/: extension-handlers.md  learn.md  python-handlers.md  sandbox-reference.md
examples/: basic.py  fork.py  mcp_agent.py  nested.py  supply_chain_defense.py
go/: README.md  cgo_pkgconfig.go  cgo_repo.go  errors.go  go.mod  sandbox.go  sandlock.pc.in  sandlock_linux.go  sandlock_linux_test.go
go/examples/basic/: main.go
go/internal/policy/: spec.go  spec_test.go
python/: README.md  pyproject.toml  setup.py
python/examples/: agent_tools.py  basic.py  fork.py  mcp_agent.py  nested.py  prompt_injection_defense.py  s3_handlers.py  supply_chain_defense.py  web_search_injection_defense.py
python/src/sandlock/: __init__.py  _handler_ffi.py  _profile.py  _sdk.py  _version.py  exceptions.py  handler.py  inputs.py  policy.py  presets.py  sandbox.py
python/src/sandlock/mcp/: __init__.py  __main__.py  _builtins.py  _policy.py  _sandbox.py  _worker.py  server.py
python/tests/: _tool_helpers.py  _worker_fixture.py  test_checkpoint.py  test_chroot_cow.py  test_chroot_legacy_syscalls.py  test_fs_mount.py  test_handler_smoke.py  test_http_inject_ca.py  test_lifecycle.py  test_mcp.py  test_mcp_integration.py  test_pipeline.py  test_policy.py  test_policy_fn.py  test_popen.py  test_profile.py  test_protection.py  test_sandbox.py  test_sandbox_config.py
src/sandlock/: __init__.py  __main__.py  _branchfs.py  _cgroup.py  _checkpoint.py  _chroot.py  _context.py  _cow.py  _cow_base.py  _events.py  _landlock.py  _mprotect.py  _network.py  _notif.py  _notif_policy.py  _overlayfs.py  _policy_ctx.py  _policy_runner.py  _port_remap.py  _procfs.py  _profile.py  _ptrace.py  _resource.py  _runner.py  _seccomp.py  _syscall_table.py  _time.py  _userns.py  _vdso.py  _version.py  cli.py  exceptions.py  policy.py  sandbox.py
src/sandlock/cowfs/: _branch.py  _handler.py
src/sandlock/deploy/: __init__.py  _cli.py  _remote.py  _sandbox.py  _scheduler.py  _ssh.py  _target.py
src/sandlock/mcp/: __init__.py  _policy.py  server.py
tests/: conftest.py  rootfs-helper.c  test_branchfs.py  test_checkpoint.py  test_clone.py  test_integration.py  test_landlock.py  test_mcp.py  test_mcp_integration.py  test_notif.py  test_pipeline.py  test_policy.py  test_policy_fn.py  test_runner.py  test_sandbox.py  test_seccomp.py
tests/containerd/: test_containerd.sh
tests/kubernetes/: runtimeclass.yaml  test_kind.sh  test_pod.yaml
