[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sandlock"
dynamic = ["version", "readme"]
description = "Lightweight process sandbox using Landlock, seccomp, and seccomp user notification"
requires-python = ">=3.8"
dependencies = ["tomli>=1.0; python_version < '3.11'"]
license = {text = "Apache-2.0"}
authors = [
    { name = "Cong Wang", email = "cwang@multikernel.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
mcp-remote = ["mcp>=1.0", "uvicorn>=0.20", "starlette>=0.27"]

[project.urls]
Homepage = "https://github.com/multikernel/sandlock"

[project.scripts]
sandlock-mcp = "sandlock.mcp.server:main"

[tool.setuptools.dynamic]
version = {attr = "sandlock._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sandlock = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
