[package]
name = "sandlock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sandlock"
path = "src/main.rs"

[dependencies]
sandlock-core = { path = "../sandlock-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
