[package]
name = "sandlock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "CLI for sandlock process sandbox"

[[bin]]
name = "sandlock"
path = "src/main.rs"

[dependencies]
sandlock-core = { version = "0.5.0", path = "../sandlock-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"
libc = "0.2"
