[package]
name = "sandlock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Lightweight process sandbox using Landlock, seccomp-bpf, and seccomp user notification"

[dependencies]
async-trait = "0.1"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "fs", "ioctl", "poll"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rand = "0.8"
rand_chacha = "0.3"
goblin = "0.9"
uuid = { version = "1", features = ["v4"] }
bincode = "1"
serde_json = "1"
walkdir = "2"
toml = "0.8"
pathdiff = "0.2"
hudsucker = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
