[package]
name = "sandlock-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI for sandlock process sandbox"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sandlock-core = { path = "../sandlock-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }

