[package]
name = "sandlock-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "C ABI for sandlock process sandbox"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sandlock-core = { version = "0.4.5", path = "../sandlock-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }

