[package]
name = "sandlock-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "C ABI for sandlock process sandbox"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sandlock-core = { version = "0.7.0", path = "../sandlock-core" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

